--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "mongoose": "^5.5.1",
     "multer": "^1.4.1",
     "posts": "0.0.1",
+    "quill": "^1.3.6",
     "stopword": "^0.2.4",
     "unirest": "^0.6.0",
     "vue": "^2.6.6",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
     "xmlhttprequest": "^1.8.0"
